zola/sass/custom.scss
.collapsible-section {
  position: relative;
}

.collapsible-section:hover {
  cursor: pointer;
  text-decoration: underline;
}

.collapsible-section:after {
  content: url("/assets/arrowdown.svg");
  font-size: 0.8rem;
  width: 20px;
  height: 20px;
  float: right;
}

.collapsible-section.open:after {
  content: url("/assets/arrowup.svg");
}

.dark .collapsible-section:after,
.dark .collapsible-section.open:after {
  filter: brightness(150%);
}

/* Style the collapsible content. Note: hidden by default */
.docs-links .collapsible-wrapper {
  overflow: hidden;
  transition: height 0.5s ease-out;
}

/* rich link */

.rich-link-card {
  border: 1px solid #dddddd !important;
  margin: 20px;
  border-radius: 10px;
  width: 100%;
  display: flex;
  text-decoration: none !important;
}

.rich-link-card-container {
  position: relative;
}

.rich-link-card-container::after {
  position: absolute;
  content: " ";
  width: 100%;
  height: 1px;
}

.rich-link-card .rich-link-image-container {
  height: 140px;
  width: 35%;
  min-width: 120px;
  overflow: hidden;
  background-color: #dddddd !important;
  border-radius: 10px 0 0 10px;
}

.rich-link-card .rich-link-image {
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  padding-bottom: 140px;
}

.rich-link-card .rich-link-card-text {
  padding: 20px;
  overflow: hidden;
  font-size: 14px;
  width: 75%;
}

.rich-link-card .rich-link-card-title {
  font-family: sans-serif;
  font-size: 16px;
  margin: 0 0 4px 0;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
  color: var(--text-normal);
}

.rich-link-card .rich-link-card-description {
  font-family: sans-serif;
  font-size: 14px;
  margin: 0;
  color: var(--text-muted);
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.rich-link-card .rich-link-href {
  font-family: sans-serif;
  font-size: 14px;
  margin: 0;
  color: var(--text-faint);
  display: -webkit-box;
  -webkit-line-clamp: 1;
  text-decoration: none;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

